[gd_scene load_steps=10 format=2]

[ext_resource path="res://resourses/fonts/Roboto-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://resourses/themes/default/styles/button/option/pressed.tres" type="StyleBox" id=2]
[ext_resource path="res://resourses/themes/default/styles/button/button_normal.tres" type="StyleBox" id=3]
[ext_resource path="res://resourses/themes/default/styles/button/button_hover.tres" type="StyleBox" id=4]
[ext_resource path="res://scenes/secondary/pause_menu/pause_menu.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 64
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("HideColor:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HideColor:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "exit"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("HideColor:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HideColor:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.235294, 0.235294, 0.235294, 0.498039 )

[node name="List" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Header" type="VBoxContainer" parent="List"]
margin_right = 1280.0
margin_bottom = 76.0

[node name="Info" type="Label" parent="List/Header"]
margin_right = 1280.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 1 )
text = "Пауза"
align = 1
valign = 1
autowrap = true

[node name="Margin" type="MarginContainer" parent="List"]
margin_top = 80.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_vertical = 3
custom_constants/margin_bottom = 50

[node name="Buttons" type="VBoxContainer" parent="List/Margin"]
margin_right = 1280.0
margin_bottom = 590.0
alignment = 2

[node name="BtnContinue" type="Button" parent="List/Margin/Buttons"]
margin_left = 490.0
margin_top = 465.0
margin_right = 790.0
margin_bottom = 504.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 4
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
text = "Продолжить"

[node name="BtnSettings" type="Button" parent="List/Margin/Buttons"]
margin_left = 490.0
margin_top = 508.0
margin_right = 790.0
margin_bottom = 547.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 4
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
text = "Настройки"

[node name="BtnInMainMenu" type="Button" parent="List/Margin/Buttons"]
margin_left = 490.0
margin_top = 551.0
margin_right = 790.0
margin_bottom = 590.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 4
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
text = "В Главное Меню"

[node name="Childs" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HideColor" type="ColorRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Animation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/exit = SubResource( 4 )

[connection signal="pressed" from="List/Margin/Buttons/BtnContinue" to="." method="_on_BtnContinue_pressed"]
[connection signal="pressed" from="List/Margin/Buttons/BtnSettings" to="." method="_on_BtnSettings_pressed"]
[connection signal="pressed" from="List/Margin/Buttons/BtnInMainMenu" to="." method="_on_BtnInMainMenu_pressed"]
[connection signal="animation_finished" from="Animation" to="." method="_on_Animation_animation_finished"]
